--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules
+.angular/cache/17.3.8/KDACalculatorWeb/.tsbuildinfo
+dist/kdacalculator-web/browser/404.html
+dist/kdacalculator-web/browser/index.html
+dist/kdacalculator-web/browser/main-OPHQS3EE.js
+dist/kdacalculator-web/browser/main-T5HGHDNA.js
